parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> start_symbol
Rule 1     start_symbol -> program
Rule 2     program -> PROGRAM LEFT_BR_CURLY instructions RIGHT_BR_CURLY
Rule 3     program -> empty
Rule 4     instructions -> instruction
Rule 5     instructions -> instruction instructions
Rule 6     instruction -> for_loop
Rule 7     instruction -> if_statement
Rule 8     instruction -> assignment
Rule 9     instruction -> empty
Rule 10    instruction -> var_declaration
Rule 11    instruction -> print
Rule 12    instruction -> input
Rule 13    for_loop -> for_loop_statement LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
Rule 14    for_loop_statement -> FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS INT_NUMBER SEMICOLON VAR EQUAL VAR PLUS number RIGHT_BR
Rule 15    if_statement -> IF LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
Rule 16    comparisons -> comparison
Rule 17    comparisons -> comparison conjunction comparisons
Rule 18    comparison -> value comparator value
Rule 19    comparator -> LESS
Rule 20    comparator -> LESS_EQUAL
Rule 21    comparator -> GREATER
Rule 22    comparator -> GREATER_EQUAL
Rule 23    comparator -> EQUAL_EQUAL
Rule 24    comparator -> NOT_EQUAL
Rule 25    operator -> PLUS
Rule 26    operator -> MINUS
Rule 27    operator -> MULTIPLY
Rule 28    operator -> DIVIDE
Rule 29    type -> INT
Rule 30    type -> STRING
Rule 31    type -> BOOL
Rule 32    type -> FLOAT
Rule 33    conjunction -> AND
Rule 34    conjunction -> OR
Rule 35    number -> INT_NUMBER
Rule 36    number -> FLOAT_NUMBER
Rule 37    bool_value -> TRUE
Rule 38    bool_value -> FALSE
Rule 39    value -> number
Rule 40    value -> VAR
Rule 41    value -> TEXT
Rule 42    value -> bool_value
Rule 43    value -> math_operation
Rule 44    math_operation -> VAR operator VAR
Rule 45    math_operation -> VAR operator number
Rule 46    math_operation -> number operator VAR
Rule 47    math_operation -> number operator number
Rule 48    assignment -> VAR EQUAL value SEMICOLON
Rule 49    assignment -> VAR EQUAL VAR SEMICOLON
Rule 50    var_declaration -> type VAR SEMICOLON
Rule 51    var_declaration -> type VAR EQUAL value SEMICOLON
Rule 52    var_declaration -> type VAR EQUAL VAR SEMICOLON
Rule 53    print -> PRINT LEFT_BR out RIGHT_BR SEMICOLON
Rule 54    out -> TEXT
Rule 55    out -> VAR
Rule 56    out -> number
Rule 57    input -> INPUT LEFT_BR VAR RIGHT_BR SEMICOLON
Rule 58    empty -> <empty>
Rule 59    change_tab_number -> <empty>

Terminals, with rules where they appear

AND                  : 33
BOOL                 : 31
DIVIDE               : 28
EQUAL                : 14 14 48 49 51 52
EQUAL_EQUAL          : 23
FALSE                : 38
FLOAT                : 32
FLOAT_NUMBER         : 36
FOR                  : 14
GREATER              : 21
GREATER_EQUAL        : 22
ID                   : 
IF                   : 15
INPUT                : 57
INT                  : 14 29
INT_NUMBER           : 14 14 35
LEFT_BR              : 14 15 53 57
LEFT_BR_CURLY        : 2 13 15
LESS                 : 14 19
LESS_EQUAL           : 20
MINUS                : 26
MULTIPLY             : 27
NOT_EQUAL            : 24
OR                   : 34
PLUS                 : 14 25
PRINT                : 53
PROGRAM              : 2
RIGHT_BR             : 14 15 53 57
RIGHT_BR_CURLY       : 2 13 15
SEMICOLON            : 14 14 48 49 50 51 52 53 57
STRING               : 30
TEXT                 : 41 54
TRUE                 : 37
VAR                  : 14 14 14 14 40 44 44 45 46 48 49 49 50 51 52 52 55 57
error                : 

Nonterminals, with rules where they appear

assignment           : 8
bool_value           : 42
change_tab_number    : 13 15
comparator           : 18
comparison           : 16 17
comparisons          : 15 17
conjunction          : 17
empty                : 3 9
for_loop             : 6
for_loop_statement   : 13
if_statement         : 7
input                : 12
instruction          : 4 5
instructions         : 2 5 13 15
math_operation       : 43
number               : 14 39 45 46 47 47 56
operator             : 44 45 46 47
out                  : 53
print                : 11
program              : 1
start_symbol         : 0
type                 : 50 51 52
value                : 18 18 48 51
var_declaration      : 10

Parsing method: LALR

state 0

    (0) S' -> . start_symbol
    (1) start_symbol -> . program
    (2) program -> . PROGRAM LEFT_BR_CURLY instructions RIGHT_BR_CURLY
    (3) program -> . empty
    (58) empty -> .

    PROGRAM         shift and go to state 3
    $end            reduce using rule 58 (empty -> .)

    start_symbol                   shift and go to state 1
    program                        shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> start_symbol .



state 2

    (1) start_symbol -> program .

    $end            reduce using rule 1 (start_symbol -> program .)


state 3

    (2) program -> PROGRAM . LEFT_BR_CURLY instructions RIGHT_BR_CURLY

    LEFT_BR_CURLY   shift and go to state 5


state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (2) program -> PROGRAM LEFT_BR_CURLY . instructions RIGHT_BR_CURLY
    (4) instructions -> . instruction
    (5) instructions -> . instruction instructions
    (6) instruction -> . for_loop
    (7) instruction -> . if_statement
    (8) instruction -> . assignment
    (9) instruction -> . empty
    (10) instruction -> . var_declaration
    (11) instruction -> . print
    (12) instruction -> . input
    (13) for_loop -> . for_loop_statement LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
    (15) if_statement -> . IF LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
    (48) assignment -> . VAR EQUAL value SEMICOLON
    (49) assignment -> . VAR EQUAL VAR SEMICOLON
    (58) empty -> .
    (50) var_declaration -> . type VAR SEMICOLON
    (51) var_declaration -> . type VAR EQUAL value SEMICOLON
    (52) var_declaration -> . type VAR EQUAL VAR SEMICOLON
    (53) print -> . PRINT LEFT_BR out RIGHT_BR SEMICOLON
    (57) input -> . INPUT LEFT_BR VAR RIGHT_BR SEMICOLON
    (14) for_loop_statement -> . FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS INT_NUMBER SEMICOLON VAR EQUAL VAR PLUS number RIGHT_BR
    (29) type -> . INT
    (30) type -> . STRING
    (31) type -> . BOOL
    (32) type -> . FLOAT

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    IF              shift and go to state 16
    VAR             shift and go to state 17
    RIGHT_BR_CURLY  reduce using rule 58 (empty -> .)
    PRINT           shift and go to state 19
    INPUT           shift and go to state 20
    FOR             shift and go to state 21
    INT             shift and go to state 22
    STRING          shift and go to state 23
    BOOL            shift and go to state 24
    FLOAT           shift and go to state 25

  ! IF              [ reduce using rule 58 (empty -> .) ]
  ! VAR             [ reduce using rule 58 (empty -> .) ]
  ! PRINT           [ reduce using rule 58 (empty -> .) ]
  ! INPUT           [ reduce using rule 58 (empty -> .) ]
  ! FOR             [ reduce using rule 58 (empty -> .) ]
  ! INT             [ reduce using rule 58 (empty -> .) ]
  ! STRING          [ reduce using rule 58 (empty -> .) ]
  ! BOOL            [ reduce using rule 58 (empty -> .) ]
  ! FLOAT           [ reduce using rule 58 (empty -> .) ]

    instructions                   shift and go to state 6
    instruction                    shift and go to state 7
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    assignment                     shift and go to state 10
    empty                          shift and go to state 11
    var_declaration                shift and go to state 12
    print                          shift and go to state 13
    input                          shift and go to state 14
    for_loop_statement             shift and go to state 15
    type                           shift and go to state 18

state 6

    (2) program -> PROGRAM LEFT_BR_CURLY instructions . RIGHT_BR_CURLY

    RIGHT_BR_CURLY  shift and go to state 26


state 7

    (4) instructions -> instruction .
    (5) instructions -> instruction . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instruction instructions
    (6) instruction -> . for_loop
    (7) instruction -> . if_statement
    (8) instruction -> . assignment
    (9) instruction -> . empty
    (10) instruction -> . var_declaration
    (11) instruction -> . print
    (12) instruction -> . input
    (13) for_loop -> . for_loop_statement LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
    (15) if_statement -> . IF LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
    (48) assignment -> . VAR EQUAL value SEMICOLON
    (49) assignment -> . VAR EQUAL VAR SEMICOLON
    (58) empty -> .
    (50) var_declaration -> . type VAR SEMICOLON
    (51) var_declaration -> . type VAR EQUAL value SEMICOLON
    (52) var_declaration -> . type VAR EQUAL VAR SEMICOLON
    (53) print -> . PRINT LEFT_BR out RIGHT_BR SEMICOLON
    (57) input -> . INPUT LEFT_BR VAR RIGHT_BR SEMICOLON
    (14) for_loop_statement -> . FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS INT_NUMBER SEMICOLON VAR EQUAL VAR PLUS number RIGHT_BR
    (29) type -> . INT
    (30) type -> . STRING
    (31) type -> . BOOL
    (32) type -> . FLOAT

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! reduce/reduce conflict for RIGHT_BR_CURLY resolved using rule 4 (instructions -> instruction .)
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    RIGHT_BR_CURLY  reduce using rule 4 (instructions -> instruction .)
    IF              shift and go to state 16
    VAR             shift and go to state 17
    PRINT           shift and go to state 19
    INPUT           shift and go to state 20
    FOR             shift and go to state 21
    INT             shift and go to state 22
    STRING          shift and go to state 23
    BOOL            shift and go to state 24
    FLOAT           shift and go to state 25

  ! IF              [ reduce using rule 58 (empty -> .) ]
  ! VAR             [ reduce using rule 58 (empty -> .) ]
  ! PRINT           [ reduce using rule 58 (empty -> .) ]
  ! INPUT           [ reduce using rule 58 (empty -> .) ]
  ! FOR             [ reduce using rule 58 (empty -> .) ]
  ! INT             [ reduce using rule 58 (empty -> .) ]
  ! STRING          [ reduce using rule 58 (empty -> .) ]
  ! BOOL            [ reduce using rule 58 (empty -> .) ]
  ! FLOAT           [ reduce using rule 58 (empty -> .) ]
  ! RIGHT_BR_CURLY  [ reduce using rule 58 (empty -> .) ]

    instruction                    shift and go to state 7
    instructions                   shift and go to state 27
    for_loop                       shift and go to state 8
    if_statement                   shift and go to state 9
    assignment                     shift and go to state 10
    empty                          shift and go to state 11
    var_declaration                shift and go to state 12
    print                          shift and go to state 13
    input                          shift and go to state 14
    for_loop_statement             shift and go to state 15
    type                           shift and go to state 18

state 8

    (6) instruction -> for_loop .

    IF              reduce using rule 6 (instruction -> for_loop .)
    VAR             reduce using rule 6 (instruction -> for_loop .)
    PRINT           reduce using rule 6 (instruction -> for_loop .)
    INPUT           reduce using rule 6 (instruction -> for_loop .)
    FOR             reduce using rule 6 (instruction -> for_loop .)
    INT             reduce using rule 6 (instruction -> for_loop .)
    STRING          reduce using rule 6 (instruction -> for_loop .)
    BOOL            reduce using rule 6 (instruction -> for_loop .)
    FLOAT           reduce using rule 6 (instruction -> for_loop .)
    RIGHT_BR_CURLY  reduce using rule 6 (instruction -> for_loop .)


state 9

    (7) instruction -> if_statement .

    IF              reduce using rule 7 (instruction -> if_statement .)
    VAR             reduce using rule 7 (instruction -> if_statement .)
    PRINT           reduce using rule 7 (instruction -> if_statement .)
    INPUT           reduce using rule 7 (instruction -> if_statement .)
    FOR             reduce using rule 7 (instruction -> if_statement .)
    INT             reduce using rule 7 (instruction -> if_statement .)
    STRING          reduce using rule 7 (instruction -> if_statement .)
    BOOL            reduce using rule 7 (instruction -> if_statement .)
    FLOAT           reduce using rule 7 (instruction -> if_statement .)
    RIGHT_BR_CURLY  reduce using rule 7 (instruction -> if_statement .)


state 10

    (8) instruction -> assignment .

    IF              reduce using rule 8 (instruction -> assignment .)
    VAR             reduce using rule 8 (instruction -> assignment .)
    PRINT           reduce using rule 8 (instruction -> assignment .)
    INPUT           reduce using rule 8 (instruction -> assignment .)
    FOR             reduce using rule 8 (instruction -> assignment .)
    INT             reduce using rule 8 (instruction -> assignment .)
    STRING          reduce using rule 8 (instruction -> assignment .)
    BOOL            reduce using rule 8 (instruction -> assignment .)
    FLOAT           reduce using rule 8 (instruction -> assignment .)
    RIGHT_BR_CURLY  reduce using rule 8 (instruction -> assignment .)


state 11

    (9) instruction -> empty .

    IF              reduce using rule 9 (instruction -> empty .)
    VAR             reduce using rule 9 (instruction -> empty .)
    PRINT           reduce using rule 9 (instruction -> empty .)
    INPUT           reduce using rule 9 (instruction -> empty .)
    FOR             reduce using rule 9 (instruction -> empty .)
    INT             reduce using rule 9 (instruction -> empty .)
    STRING          reduce using rule 9 (instruction -> empty .)
    BOOL            reduce using rule 9 (instruction -> empty .)
    FLOAT           reduce using rule 9 (instruction -> empty .)
    RIGHT_BR_CURLY  reduce using rule 9 (instruction -> empty .)


state 12

    (10) instruction -> var_declaration .

    IF              reduce using rule 10 (instruction -> var_declaration .)
    VAR             reduce using rule 10 (instruction -> var_declaration .)
    PRINT           reduce using rule 10 (instruction -> var_declaration .)
    INPUT           reduce using rule 10 (instruction -> var_declaration .)
    FOR             reduce using rule 10 (instruction -> var_declaration .)
    INT             reduce using rule 10 (instruction -> var_declaration .)
    STRING          reduce using rule 10 (instruction -> var_declaration .)
    BOOL            reduce using rule 10 (instruction -> var_declaration .)
    FLOAT           reduce using rule 10 (instruction -> var_declaration .)
    RIGHT_BR_CURLY  reduce using rule 10 (instruction -> var_declaration .)


state 13

    (11) instruction -> print .

    IF              reduce using rule 11 (instruction -> print .)
    VAR             reduce using rule 11 (instruction -> print .)
    PRINT           reduce using rule 11 (instruction -> print .)
    INPUT           reduce using rule 11 (instruction -> print .)
    FOR             reduce using rule 11 (instruction -> print .)
    INT             reduce using rule 11 (instruction -> print .)
    STRING          reduce using rule 11 (instruction -> print .)
    BOOL            reduce using rule 11 (instruction -> print .)
    FLOAT           reduce using rule 11 (instruction -> print .)
    RIGHT_BR_CURLY  reduce using rule 11 (instruction -> print .)


state 14

    (12) instruction -> input .

    IF              reduce using rule 12 (instruction -> input .)
    VAR             reduce using rule 12 (instruction -> input .)
    PRINT           reduce using rule 12 (instruction -> input .)
    INPUT           reduce using rule 12 (instruction -> input .)
    FOR             reduce using rule 12 (instruction -> input .)
    INT             reduce using rule 12 (instruction -> input .)
    STRING          reduce using rule 12 (instruction -> input .)
    BOOL            reduce using rule 12 (instruction -> input .)
    FLOAT           reduce using rule 12 (instruction -> input .)
    RIGHT_BR_CURLY  reduce using rule 12 (instruction -> input .)


state 15

    (13) for_loop -> for_loop_statement . LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY

    LEFT_BR_CURLY   shift and go to state 28


state 16

    (15) if_statement -> IF . LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY

    LEFT_BR         shift and go to state 29


state 17

    (48) assignment -> VAR . EQUAL value SEMICOLON
    (49) assignment -> VAR . EQUAL VAR SEMICOLON

    EQUAL           shift and go to state 30


state 18

    (50) var_declaration -> type . VAR SEMICOLON
    (51) var_declaration -> type . VAR EQUAL value SEMICOLON
    (52) var_declaration -> type . VAR EQUAL VAR SEMICOLON

    VAR             shift and go to state 31


state 19

    (53) print -> PRINT . LEFT_BR out RIGHT_BR SEMICOLON

    LEFT_BR         shift and go to state 32


state 20

    (57) input -> INPUT . LEFT_BR VAR RIGHT_BR SEMICOLON

    LEFT_BR         shift and go to state 33


state 21

    (14) for_loop_statement -> FOR . LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS INT_NUMBER SEMICOLON VAR EQUAL VAR PLUS number RIGHT_BR

    LEFT_BR         shift and go to state 34


state 22

    (29) type -> INT .

    VAR             reduce using rule 29 (type -> INT .)


state 23

    (30) type -> STRING .

    VAR             reduce using rule 30 (type -> STRING .)


state 24

    (31) type -> BOOL .

    VAR             reduce using rule 31 (type -> BOOL .)


state 25

    (32) type -> FLOAT .

    VAR             reduce using rule 32 (type -> FLOAT .)


state 26

    (2) program -> PROGRAM LEFT_BR_CURLY instructions RIGHT_BR_CURLY .

    $end            reduce using rule 2 (program -> PROGRAM LEFT_BR_CURLY instructions RIGHT_BR_CURLY .)


state 27

    (5) instructions -> instruction instructions .

    RIGHT_BR_CURLY  reduce using rule 5 (instructions -> instruction instructions .)


state 28

    (13) for_loop -> for_loop_statement LEFT_BR_CURLY . change_tab_number instructions RIGHT_BR_CURLY
    (59) change_tab_number -> .

    IF              reduce using rule 59 (change_tab_number -> .)
    VAR             reduce using rule 59 (change_tab_number -> .)
    PRINT           reduce using rule 59 (change_tab_number -> .)
    INPUT           reduce using rule 59 (change_tab_number -> .)
    FOR             reduce using rule 59 (change_tab_number -> .)
    INT             reduce using rule 59 (change_tab_number -> .)
    STRING          reduce using rule 59 (change_tab_number -> .)
    BOOL            reduce using rule 59 (change_tab_number -> .)
    FLOAT           reduce using rule 59 (change_tab_number -> .)
    RIGHT_BR_CURLY  reduce using rule 59 (change_tab_number -> .)

    change_tab_number              shift and go to state 35

state 29

    (15) if_statement -> IF LEFT_BR . comparisons RIGHT_BR LEFT_BR_CURLY change_tab_number instructions RIGHT_BR_CURLY
    (16) comparisons -> . comparison
    (17) comparisons -> . comparison conjunction comparisons
    (18) comparison -> . value comparator value
    (39) value -> . number
    (40) value -> . VAR
    (41) value -> . TEXT
    (42) value -> . bool_value
    (43) value -> . math_operation
    (35) number -> . INT_NUMBER
    (36) number -> . FLOAT_NUMBER
    (37) bool_value -> . TRUE
    (38) bool_value -> . FALSE
    (44) math_operation -> . VAR operator VAR
    (45) math_operation -> . VAR operator number
    (46) math_operation -> . number operator VAR
    (47) math_operation -> . number operator number

    VAR             shift and go to state 40
    TEXT            shift and go to state 41
    INT_NUMBER      shift and go to state 44
    FLOAT_NUMBER    shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    comparisons                    shift and go to state 36
    comparison                     shift and go to state 37
    value                          shift and go to state 38
    number                         shift and go to state 39
    bool_value                     shift and go to state 42
    math_operation                 shift and go to state 43

state 30

    (48) assignment -> VAR EQUAL . value SEMICOLON
    (49) assignment -> VAR EQUAL . VAR SEMICOLON
    (39) value -> . number
    (40) value -> . VAR
    (41) value -> . TEXT
    (42) value -> . bool_value
    (43) value -> . math_operation
    (35) number -> . INT_NUMBER
    (36) number -> . FLOAT_NUMBER
    (37) bool_value -> . TRUE
    (38) bool_value -> . FALSE
    (44) math_operation -> . VAR operator VAR
    (45) math_operation -> . VAR operator number
    (46) math_operation -> . number operator VAR
    (47) math_operation -> . number operator number

    VAR             shift and go to state 48
    TEXT            shift and go to state 41
    INT_NUMBER      shift and go to state 44
    FLOAT_NUMBER    shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    value                          shift and go to state 49
    number                         shift and go to state 39
    bool_value                     shift and go to state 42
    math_operation                 shift and go to state 43

state 31

    (50) var_declaration -> type VAR . SEMICOLON
    (51) var_declaration -> type VAR . EQUAL value SEMICOLON
    (52) var_declaration -> type VAR . EQUAL VAR SEMICOLON

    SEMICOLON       shift and go to state 50
    EQUAL           shift and go to state 51


state 32
